k8s/gitops/50-applications/53-frontend/base/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  labels:
    app: frontend
    level: stage
  name: chat-app-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
        level: stage
    spec:
      serviceAccountName: front-sa
      tolerations:
        - key: "app"
          operator: "Equal"
          value: "frontend"
          effect: "NoSchedule"
      containers:
      - image: ghcr.io/rajarshigit2441139/chatapp/frontend-arm64:1.0.0-rc.3
        name: chat-app-frontend
        imagePullPolicy: Always
        ports:
          - name: http
            containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 20
          periodSeconds: 15
        resources: 
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits: 
            memory: "256Mi"
            cpu: "200m"

      - name: nginx-prometheus-exporter
        image: nginx/nginx-prometheus-exporter:1.4.2
        args:
           - -nginx.scrape-uri=http://127.0.0.1/nginx_status
        ports:
          - name: metrics
            containerPort: 9113
        resources:
          requests:
            cpu: 10m
            memory: 16Mi
          limits:
            cpu: 50m
            memory: 64Mi
